--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "api/**/*.php": { "runtime": "vercel-php@0.7.4" }
   },
   "routes": [
-    { "src": "/api/payments", "dest": "/api/payments.php" },
-    { "src": "/api/webhook",  "dest": "/api/webhook.php"  }
+    { "src": "^/api/payments$", "dest": "/api/payments.php" },
+    { "src": "^/api/webhook$",  "dest": "/api/webhook.js"  },
+    { "src": "^/api/health$",   "dest": "/api/health.php"  }
   ]
 }
