--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
   "functions": {
     "api/**/*.php": { "runtime": "vercel-php@0.7.4" }
   },
