--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
   "functions": {
     "api/**/*.php": { "runtime": "vercel-php@0.7.4" }
   },
   "routes": [
     { "src": "^/api/payments$", "dest": "/api/payments.php" },
     { "src": "^/api/webhook$",  "dest": "/api/webhook.js"  }
-  ],
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*\\.(?:js|css|png|jpg|jpeg|svg|gif|ico|json|txt|map|woff2?))", "destination": "/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
