--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
-  ],
+  "version": 2,
   "functions": {
     "api/**/*.php": { "runtime": "vercel-php@0.7.4" }
   },
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+
+    { "source": "/((?!api|_next|assets|favicon\\.ico|robots\\.txt|.*\\..*).*)", "destination": "/" }
+  ],
   "routes": [
     { "src": "^/api/payments$", "dest": "/api/payments.php" },
     { "src": "^/api/webhook$",  "dest": "/api/webhook.js"  }
